--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Site Maintenance</title>
+<title>Website Under Construction</title>
 <style>
   body { text-align: center; padding: 1px; }
   h1 { font-size: 20px; }
@@ -15,7 +15,7 @@
         We&rsquo;ll be back soon!
     </h1>
     <div>
-        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need you can always <a href="mailto:contact@consilium.com.tn">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
+        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need you can always<a href = "mailto:contact@consilium.tn" style="color:#2C3E92";> <b>contact us</b></a>, otherwise we&rsquo;ll be back online shortly!</p>
         <p>&mdash; The Team</p>
     </div>
 </article>
