--- a/contact.html
+++ b/contact.html
@@ -225,7 +225,7 @@
 							<div class="media-body">
 							    
                                 <h2>Tunisia</h2> 
-                                <h3>63, Rue des perles El Ghazala ARIANA, 2083 - TN</h3> <br>                             
+                                <h3>63, Rue des perles El Ghazala Ariana, 2083 - TN</h3> <br>                             
 							</div>
 						</div>
 				        <div class="media contact-info">
