--- a/contact.html
+++ b/contact.html
@@ -225,14 +225,14 @@
 							<div class="media-body">
 							    
                                 <h2>Tunisia</h2> 
-                                <h3>63, Rue des perles El Ghazala Ariana, 2083 - TN</h3> <br>                             
+                                <h3>63, Rue des perles, El Ghazala Ariana, 2083 - TN</h3> <br>                             
 							</div>
 						</div>
 				        <div class="media contact-info">
 						    <span class="contact-info__icon"><i class="ti-home"></i></span>
 							<div class="media-body">
 								<h2>Belgium</h2>
-				                <h3>17, Avenue Adolphe Lacomblé, Schaerbeek Bruxelles,1030 - BE </h3>  			
+				                <h3>17, Avenue Adolphe Lacomblé, Schaerbeek Bruxelles, 1030 - BE</h3>  			
 					        </div> 
 						</div> 
                         <div class="media contact-info">
