--- a/blog.html
+++ b/blog.html
@@ -227,7 +227,7 @@ The vulnerabilities affect Exchange Server versions 2013, 2016, and 2019, while 
                                         <h2>Transitioning to Windows 10 & Office 365</h2>
                                     </a>
                                     <p>On September 6, 2018 Microsoft announced two new resources to help customers shift to the modern desktop - Desktop Analytics and Desktop App Assure.
-Desktop Analytics is a new service designed to create an inventory of apps running in the organization, assess app compatibility with the latest feature updates of Windows 10 and Office 365 ProPlus..</p>
+Desktop Analytics is a new service designed to create an inventory of apps running in the organization, assess app compatibility with the latest feature updates of Windows 10 and Office 365 ProPlus.</p>
                            <!--     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
