--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <!-- Section Tittle -->
                     <div class="section-tittle mb-70">
                         <span>Our Top Services</span>
-                        <h2>Our Best Services</h2>
+                        <h2>Our Services</h2>
                     </div>
                 </div>
             </div>
