--- a/services.html
+++ b/services.html
@@ -127,7 +127,7 @@
                     <!-- Section Tittle -->
 					                    <div class="section-tittle mb-70">
                          <span>Our Top Services</span>
-                        <h2>Our Best Services</h2>
+                        <h2>Our Services</h2>
 						<h2 id="Solutions"></h2>
                     </div>
                 </div>
