--- a/about.html
+++ b/about.html
@@ -198,7 +198,7 @@
                                 <img src="assets/img/gallery/team2.png" alt="">
                             </div>
                             <div class="team-caption">
-                                <h3><a href="https://www.veeam.com">Backup and Recovery</a></h3>
+                                <h3><a href="veeam_details.html">Backup and Recovery</a></h3>
                                 <span>Eliminate Data Loss</span>
                             </div>
                         </div>
@@ -220,7 +220,7 @@
                                 <img src="assets/img/gallery/team1.png" alt="">
                             </div>
                             <div class="team-caption">
-                                <h3><a href="https://www.microsoft.com/en-us/microsoftservices/Cloud-Infrastructure-and-Management-Services.aspx">Infrastructure Technology</a></h3>
+                                <h3><a href="https://www.microsoft.com/en-us/solution-providers/partnerdetails/consilium_9e84884f-f983-4876-9e7b-acaa2b7750f3/82b57cf3-f416-4327-b274-32952dd0eccb">Infrastructure Technology</a></h3>
                                 <span>On-prem, Hybrid and cloud solutions</span>
                             </div>
                         </div>
