--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <!-- Section Tittle -->
                     <div class="section-tittle mb-70">
                         <span>Our Top Services</span>
-                        <h2>Our Services</h2>
+                        <h2>Our Best Services</h2>
                     </div>
                 </div>
             </div>
@@ -165,7 +165,7 @@
                             <span class="fas fa-tasks"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">Consulting Services</a></h5>
+                            <h5><a href="consulting_services_details.html">Consulting Services</a></h5>
                             <p>We support analysing your IT strategy, identifying key transformation projects, outlining migration paths and accompanying deployments, providing guidance and recommendations, and selecting the best solutions and partners.</p>
                         </div>
                     </div>
@@ -176,7 +176,7 @@
                             <span class="fas fa-cloud-upload-alt"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">Cloud Solutions</a></h5>
+                            <h5><a href="cloud_solutions_details.html">Cloud Solutions</a></h5>
                             <p>Our team is here to help with cloud migration consulting, whether you need O365 migration steps, or are looking to move an on premise infrastructure to an IaaS, or are just looking to put critical applications in the cloud for an effective DR plan.</p>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                             <span class="fas fa-server"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">Infrastructure Management</a></h5>
+                            <h5><a href="infrastructure_management_details.html">Infrastructure Management</a></h5>
                             <p>We span across the infrastructure lifecycle of Plan-Build-Run-Monitor and includes data center, end user computing, enterprise networking, enterprise security, IT infrastructure operation management and support services.</p>
                         </div>
                     </div>
@@ -198,7 +198,7 @@
                             <span class="fas fa-envelope"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">Enterprise Messaging</a></h5>
+                            <h5><a href="enterprise_messaging_details.html">Enterprise Messaging</a></h5>
                             <p>Our expertise in Microsoft Exchange enterprise messaging and security design will bring your team to the next level.</p>
                         </div>
                     </div>
@@ -209,7 +209,7 @@
                             <span class="fas fa-user-secret"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">Cybersecurity<br> </a></h5>
+                            <h5><a href="cybersecurity_details.html">Cybersecurity<br> </a></h5>
                             <p>Consilium’s Cyber Security Services implement the latest technology and industry best practices to keep your business safe.</p>
                         </div>
                     </div>
@@ -220,7 +220,7 @@
                             <span class="fas fa-cogs"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">Data Protection</a></h5>
+                            <h5><a href="data_protection_details.html">Data Protection</a></h5>
                             <p>Increase data protection, mitigate information risk and ensure access to critical information with our backup and protection data experts.</p>
                         </div>
                     </div>
@@ -436,39 +436,39 @@
             </div>
             <div class="row">
                 <!-- single Tem -->
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
-                    <div class="single-team mb-30">
-                        <div class="team-img">
-                            <img src="assets/img/gallery/team2.png" alt="">
-                        </div>
-                        <div class="team-caption">
-                            <h3><a href="veeam_details.html">Backup and Recovery</a></h3>
-                            <span>Eliminate Data Loss</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
-                    <div class="single-team mb-30">
-                        <div class="team-img">
-                            <img src="assets/img/gallery/team3.png" alt="">
-                        </div>
-                        <div class="team-caption">
-                            <h3><a href="https://www.vmware.com">Virtualization Technology</a></h3>
-                            <span>Modernizing applications and infrastructure</span>
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
+                        <div class="single-team mb-30">
+                            <div class="team-img">
+                               <a href="veeam_details.html"> <img src="assets/img/gallery/team2.png" alt=""> </a>
+                            </div>
+                            <div class="team-caption">
+                                <h3><a>Backup and Recovery</a></h3>
+                                <span>Eliminate Data Loss</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
-                    <div class="single-team mb-30">
-                        <div class="team-img">
-                            <img src="assets/img/gallery/team1.png" alt="">
-                        </div>
-                        <div class="team-caption">
-                            <h3><a href="https://www.microsoft.com/en-us/solution-providers/partnerdetails/consilium_9e84884f-f983-4876-9e7b-acaa2b7750f3/82b57cf3-f416-4327-b274-32952dd0eccb">Infrastructure Technology</a></h3>
-                            <span>On-prem, Hybrid and cloud solutions</span>
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
+                        <div class="single-team mb-30">
+                            <div class="team-img">
+                                <a href="https://www.vmware.com"><img src="assets/img/gallery/team3.png" alt=""> </a>
+                            </div>
+                            <div class="team-caption">
+                                <h3><a>Virtualization Technology</a></h3>
+                                <span>Modernizing applications and infrastructure</span>
+                            </div>
                         </div>
                     </div>
-                </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
+                        <div class="single-team mb-30">
+                            <div class="team-img">
+                               <a href="https://www.microsoft.com/en-us/solution-providers/partnerdetails/consilium_9e84884f-f983-4876-9e7b-acaa2b7750f3/82b57cf3-f416-4327-b274-32952dd0eccb"> <img src="assets/img/gallery/team1.png" alt=""> </a>
+                            </div>
+                            <div class="team-caption">
+                                <h3><a>Infrastructure Technology</a></h3>
+                                <span>On-prem, Hybrid and cloud solutions</span>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </div>
     </div>
@@ -512,7 +512,7 @@
                                 </ul>
                             </div>
                             <div class="blog-cap">
-                                <h3><a href="blog_details.html">Microsoft Office 365</a></h3>
+                                <h3><a href="https://www.microsoft.com/en-us/microsoft-365">Microsoft Office 365</a></h3>
                                 <p>Microsoft Office 365 is a Software as a Service (SaaS) solution that includes Microsoft Office and other services, such as email and collaboration, from Microsoft’s cloud server. Microsoft Office 365 provides desktop functionalities and is available by subscription.</p>
                                 <a href="https://www.microsoft.com/en-us/microsoft-365" class="more-btn">Read more</a>
                             </div>
@@ -529,7 +529,7 @@
                                 </ul>
                             </div>
                             <div class="blog-cap">
-                                <h3><a href="blog_details.html">Microsoft Azure</a></h3>
+                                <h3><a href="https://azure.microsoft.com/en-us/">Microsoft Azure</a></h3>
                                 <p>Azure is a public cloud computing platform with solutions including Infrastructure as a Service (IaaS) and Platform as a Service (PaaS), that can be used for services such as virtual computing, storage, networking, and much more. It can be used to replace or supplement your on-premise servers.</p>
                                 <a href="https://azure.microsoft.com/en-us/" class="more-btn">Read more</a>
                             </div>
