--- a/about.html
+++ b/about.html
@@ -195,10 +195,10 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
                         <div class="single-team mb-30">
                             <div class="team-img">
-                                <img src="assets/img/gallery/team2.png" alt="">
+                               <a href="veeam_details.html"> <img src="assets/img/gallery/team2.png" alt=""> </a>
                             </div>
                             <div class="team-caption">
-                                <h3><a href="veeam_details.html">Backup and Recovery</a></h3>
+                                <h3><a>Backup and Recovery</a></h3>
                                 <span>Eliminate Data Loss</span>
                             </div>
                         </div>
@@ -206,10 +206,10 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
                         <div class="single-team mb-30">
                             <div class="team-img">
-                                <img src="assets/img/gallery/team3.png" alt="">
+                                <a href="https://www.vmware.com"><img src="assets/img/gallery/team3.png" alt=""> </a>
                             </div>
                             <div class="team-caption">
-                                <h3><a href="https://www.vmware.com">Virtualization Technology</a></h3>
+                                <h3><a>Virtualization Technology</a></h3>
                                 <span>Modernizing applications and infrastructure</span>
                             </div>
                         </div>
@@ -217,10 +217,10 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
                         <div class="single-team mb-30">
                             <div class="team-img">
-                                <img src="assets/img/gallery/team1.png" alt="">
+                               <a href="https://www.microsoft.com/en-us/solution-providers/partnerdetails/consilium_9e84884f-f983-4876-9e7b-acaa2b7750f3/82b57cf3-f416-4327-b274-32952dd0eccb"> <img src="assets/img/gallery/team1.png" alt=""> </a>
                             </div>
                             <div class="team-caption">
-                                <h3><a href="https://www.microsoft.com/en-us/solution-providers/partnerdetails/consilium_9e84884f-f983-4876-9e7b-acaa2b7750f3/82b57cf3-f416-4327-b274-32952dd0eccb">Infrastructure Technology</a></h3>
+                                <h3><a>Infrastructure Technology</a></h3>
                                 <span>On-prem, Hybrid and cloud solutions</span>
                             </div>
                         </div>
@@ -431,7 +431,7 @@
                                 <!-- Form -->
                                 <div class="footer-form">
                                     <div id="mc_embed_signup">
-                                        <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative mail_part" novalidate="true">
+                                        <form target="_blank" action="" method="get" class="subscribe_form relative mail_part" novalidate="true">
                                             <input type="email" name="EMAIL" id="newsletter-form-email" placeholder=" Email Address " class="placeholder hide-on-focus" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your email address'">
                                             <div class="form-icon">
                                                 <button type="submit" name="submit" id="newsletter-submit" class="email_icon newsletter-submit button-contactForm">
