--- a/services.html
+++ b/services.html
@@ -128,6 +128,7 @@
 					                    <div class="section-tittle mb-70">
                          <span>Our Top Services</span>
                         <h2>Our Services</h2>
+						<p>When your to-do list is impossibly large, it means your IT needs fall by the wayside. Trust Consilium’s solutions architects and implementation engineers to execute your vision, giving your team an automatic boost from our experienced industry professionals.</p>
 						<h2 id="Solutions"></h2>
                     </div>
                 </div>
@@ -139,7 +140,7 @@
                             <span class="fas fa-tasks"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">Consulting Services</a></h5>
+                            <h5><a href="consulting_services_details.html">Consulting Services</a></h5>
                             <p>We support analysing your IT strategy, identifying key transformation projects, outlining migration paths and accompanying deployments, providing guidance and recommendations, and selecting the best solutions and partners.</p>
                         </div>
                     </div>
@@ -150,7 +151,7 @@
                             <span class="fas fa-cloud-upload-alt"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">Cloud Solutions</a></h5>
+                            <h5><a href="cloud_solutions_details.html">Cloud Solutions</a></h5>
                             <p>Our team is here to help with cloud migration consulting, whether you need O365 migration steps, or are looking to move an on premise infrastructure to an IaaS, or are just looking to put critical applications in the cloud for an effective DR plan.</p>
                         </div>
                     </div>
@@ -161,7 +162,7 @@
                             <span class="fas fa-server"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">Infrastructure Management</a></h5>
+                            <h5><a href="infrastructure_management_details.html">Infrastructure Management</a></h5>
                             <p>We span across the infrastructure lifecycle of Plan-Build-Run-Monitor and includes data center, end user computing, enterprise networking, enterprise security, IT infrastructure operation management and support services.</p>
                         </div>
                     </div>
@@ -172,7 +173,7 @@
                             <span class="fas fa-envelope"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">Enterprise Messaging</a></h5>
+                            <h5><a href="enterprise_messaging_details.html">Enterprise Messaging</a></h5>
                             <p>Our expertise in Microsoft Exchange enterprise messaging and security design will bring your team to the next level.</p>
                         </div>
                     </div>
@@ -183,7 +184,7 @@
                             <span class="fas fa-user-secret"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">Cybersecurity<br> </a></h5>
+                            <h5><a href="cybersecurity_details.html">Cybersecurity<br> </a></h5>
                             <p>Consilium’s Cyber Security Services implement the latest technology and industry best practices to keep your business safe.</p>
                         </div>
                     </div>
@@ -194,7 +195,7 @@
                             <span class="fas fa-cogs"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">Data Protection</a></h5>
+                            <h5><a href="data_protection_details.html">Data Protection</a></h5>
                             <p>Increase data protection, mitigate information risk and ensure access to critical information with our backup and protection data experts.</p>
                         </div>
                     </div>
@@ -307,7 +308,7 @@
                                 <!-- Form -->
                                 <div class="footer-form">
                                     <div id="mc_embed_signup">
-                                        <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative mail_part" novalidate="true">
+                                        <form target="_blank" action="" method="get" class="subscribe_form relative mail_part" novalidate="true">
                                             <input type="email" name="EMAIL" id="newsletter-form-email" placeholder=" Email Address " class="placeholder hide-on-focus" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your email address'">
                                             <div class="form-icon">
                                                 <button type="submit" name="submit" id="newsletter-submit" class="email_icon newsletter-submit button-contactForm">
