--- a/consulting_services_details.html
+++ b/consulting_services_details.html
@@ -127,6 +127,7 @@
 					<div class="section-tittle mb-70">
                          <span>Consulting Services</span>
                         <h2>OUR IT CONSULTING SERVICES</h2>
+						<p>Use the expertise and deep tech background of the best minds at Consilium to create a comprehensive IT strategy for a digital and technological transformation of your organization that goes in line with your business objectives. Our strategic IT consulting will help you automate and digitalise operations, optimise the software portfolio, and implement the latest technologies.</p>
 					</div>
                 </div>
             </div>
