--- a/cloud_solutions_details.html
+++ b/cloud_solutions_details.html
@@ -127,6 +127,7 @@
 					<div class="section-tittle mb-70">
                          <span>Cloud Solutions</span>
                         <h2>Cloud Computing Business Solutions</h2>
+						<p>More and more businesses are moving to the cloud. It’s not a fashion statement in the IT world — there lies a definite need to move from traditional software models to the internet. Notably, Cloud Computing Solutions has steadily gained momentum over the last 10 years. The way forward is very promising and rewarding as the next generation cloud computing solutions are designed to collaborate everywhere, through mobile devices.</p>
                     </div>
                 </div>
             </div>
@@ -137,7 +138,7 @@
                             <span class="fas fa-cloud-upload-alt"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">Software as a Service (SaaS)</a></h5>
+                            <h5><a>Software as a Service (SaaS)</a></h5>
                             <p>Software as a Service (SaaS) is the most commonly used area of cloud computing that provides multiple cloud tenants access to a certain application. Office 365 is a form of SaaS where anyone can open a monthly subscription to Microsoft’s suite of Office products. SaaS provides a complete solution owned and managed by an IT services provider. These solutions are optimal for end-user applications for daily operations.</p>
                         </div>
                     </div>
@@ -148,7 +149,7 @@
                             <span class="fas fa-cloud-upload-alt"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">Platform as a service (PaaS)</a></h5>
+                            <h5><a>Platform as a service (PaaS)</a></h5>
                             <p>Platform as a service (PaaS) includes the hardware and operating systems needed to deploy and manage cloud applications. PaaS and IaaS go hand-in-hand because you need a platform to manage the IT infrastructure. Windows Azure cloud services is also a PaaS provider that supports .NET, PHP, Python, Java and Ruby. With software development kits and Visual Studio at your disposal, developers can easily create and deploy applications. For storage, developers can choose from a SQL Database, Tables and Blobs.</p>
                         </div>
                     </div>
@@ -159,7 +160,7 @@
                             <span class="fas fa-cloud-upload-alt"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">Infrastructure as a service (IaaS)</a></h5>
+                            <h5><a>Infrastructure as a service (IaaS)</a></h5>
                             <p>Infrastructure as a service (IaaS) includes the basic necessities for the cloud and offers access to network functions, virtual machines, dedicated hardware and storage space. These technologies serve as the foundation for your business operations, SaaS and other cloud-based services. Windows Azure and Amazon Web Services are two common IaaS providers that enable you to outsource infrastructure like backup and storage space, space needed for testing and more. Azure offers access to virtual networks, service buses, message queues and non-relational storage platforms.</p>
                         </div>
                     </div>
@@ -181,7 +182,7 @@
                             <!-- Section Tittle -->
                             <div class="section-tittle section-tittle2 mb-50">
                                 <span>Cloud Foundation</span>
-                                <h2>Align your business goals with technology solution</h2>
+                                <h2>Align your business goals with technology solution.</h2>
                             </div>
                             <div class="support-caption">
                                 <p class="pera-top">Pondering the best mix of cloud solutions to support your business potential?</p>
