--- a/cybersecurity_details.html
+++ b/cybersecurity_details.html
@@ -126,7 +126,7 @@
                 <div class="col-lg-12">	
 					<div class="section-tittle mb-70">
                          <span>Cybersecurity</span>
-                        <h2>STRATEGIC SECURITY SERVICES</h2>
+                        <h2>Strategic Security Services</h2>
 						<p>Our Strategic Security Services engagements work alongside your team to deliver a strategic and prioritized security roadmap customized for your business. Maximize your security budgets, coverage, capabilities and skills to reduce real business risks.</p>
                     </div>
                 </div>
@@ -135,10 +135,10 @@
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="single-cat text-center mb-50">
                         <div class="cat-icon">
-                            <span class="fas fa-user-secret"></span>
+                            <span class="fas fa-lock"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">THREAT AND RISK ASSESSMENT</a></h5>
+                            <h5><a href="">Threat And Risk Assessment</a></h5>
                             <p>Organisations often implement a range of security mechanisms to reduce the risk of a major security breach. By taking a threat and risk based-approach, we gain a deep understanding of your business, your key threat actors, your critical assets and functions, your security controls, and then define the threat scenarios that would lead to these critical assets suffering a security breach. A prioritised security roadmap is developed so that you can plan and implement your short, medium and long-term security projects and budgets to ensure your business is safe.</p>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                             <span class="fas fa-user-secret"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">SECURITY ARCHITECTURE REVIEW</a></h5>
+                            <h5><a href="">Security Architecture Review</a></h5>
                             <p>Your security architecture is the key to keeping your organisation from suffering a major security breach. If you don’t have an effective security architecture that covers your entire business, across all your locations, clouds and devices, then you run the risk of your weakest areas becoming compromised and your business suffering significant financial and reputational impacts. Security Architecture Reviews gain an understanding of your organisation, systems and security controls across all locations, and identifies areas that an attacker can abuse and increases the risk to your business.</p>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                             <span class="fas fa-user-secret"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">SECURITY ARCHITECTURE DESIGN</a></h5>
+                            <h5><a href="">Security Architecture Design</a></h5>
                             <p>It is common for organisations to have dated, incomplete or missing security architectures, especially for cloud environments that have been implemented without sufficient thought to effective security controls and security operations. Our security specialists understand how hackers break into organisations and how to prevent them from being successful. We can design a security architecture specifically for your business to ensure that threats are dissolved, attacks are effectively blocked, and security breaches are identified and contained efficiently.</p>
                         </div>
                     </div>
@@ -168,10 +168,10 @@
 								<div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="single-cat text-center mb-50">
                         <div class="cat-icon">
-                            <span class="fas fa-user-secret"></span>
+                            <span class="fas fa-unlock-alt"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">INCIDENT RESPONSE PROCEDURES</a></h5>
+                            <h5><a href="">Incident Response Procedures</a></h5>
                             <p>Security breaches are a common occurrence for organisations, with nearly every organising having suffered a security breach at some point. To minimise the impact of a security breach, you need to not only act fast to contain the breach, but also act appropriately to ensure that unplanned and unwanted situations are avoided. Our Incident Response Procedure Development service identifies the key threats to your business and then provides you with clear and customised steps to be taken before, during and after a security breach.</p>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                             <!-- Section Tittle -->
                             <div class="section-tittle section-tittle2 mb-50">
                                 <span>Cybersecurity</span>
-                                <h2>Improve your security posture</h2>
+                                <h2>Improve your security posture.</h2>
                             </div>
                             <div class="support-caption">
                                 <p class="pera-top">We’re not just protecting users, customers, and patients. We’re protecting your business as well.</p>
