--- a/enterprise_messaging_details.html
+++ b/enterprise_messaging_details.html
@@ -127,8 +127,8 @@
 					<div class="section-tittle mb-70">
                          <span>Enterprise Messaging</span>
                         <h2>Email & Messaging</h2>
-						<p>Are you looking at setting up <strong>an email server </strong>for your company, branch office, institutions, or <strong>any size of organizations </strong>?</p>
-                        <p>We always have <strong>the right solutions </strong>to meet your business objectives! Typically, there are two categories of messaging solutions for choice:</p>
+						<p>Are you looking at setting up an email server for your company, branch office, institutions, or any size of organizations ?</p>
+                        <p>We always have the right solutions to meet your business objectives! Typically, there are two categories of messaging solutions for choice:</p>
                     </div>
                 </div>
             </div>
@@ -172,10 +172,10 @@
                             <!-- Section Tittle -->
                             <div class="section-tittle section-tittle2 mb-50">
                                 <span>Enterprise Messaging</span>
-                                <h2>The world’s leading Microsoft Exchange experts</h2>
+                                <h2>The world’s leading Microsoft Exchange experts.</h2>
                             </div>
                             <div class="support-caption">
-                                <p class="pera-top">Our expertise in Microsoft Exchange enterprise messaging and security design will bring your team to the next level</p>
+                                <p class="pera-top">Our expertise in Microsoft Exchange enterprise messaging and security design will bring your team to the next level.</p>
                                 <p class="mb-65">Messaging is mission critical to your business. You should be able to expect stability. Kraft Kennedy’s industry-renowned engineers design custom environments and provide ongoing support with a focus on user experience and productivity.</p>
                                 <a href="about.html" class="btn post-btn">More About Us</a>
                             </div>
