--- a/infrastructure_management_details.html
+++ b/infrastructure_management_details.html
@@ -126,9 +126,10 @@
                 <div class="col-lg-12">	
 					<div class="section-tittle mb-70">
                          <span>Infrastructure Management</span>
-                        <h2>What is IT Infrastructure Management?</h2>
-						<p>IT infrastructure encompasses <strong>all elements </strong>that <strong>support </strong>the <strong>usability </strong>and <strong>management </strong>of <strong>data </strong>and <strong>information </strong>in a company. This includes <strong>physical hardware </strong>as well as <strong>equipment</strong>, <strong>network systems</strong>, <strong>data storage </strong>and <strong>retrieval</strong>, <strong>software </strong>and <strong>legacy interfaces</strong>.</p>
-                        <p>IT infrastructure management is the <strong>coordination </strong>and <strong>operation </strong>of the <strong>IT infrastructure</strong>. Specifically, the <strong>planning</strong>, <strong>documentation</strong>, and <strong>administration </strong>of all <strong>related assets </strong>including servers, processes, mobile and virtual functions, networks, software and data.</p>
+                        <h2>Hand Over Your IT Infrastructure to Experts</h2>
+						<p>IT infrastructure encompasses all elements that support the usability and management of data and information in a company. This includes physical hardware as well as equipment, network systems, data storage and retrieval, software and legacy interfaces.</p>
+                        <p>IT infrastructure management is the coordination and operation of the IT infrastructure. Specifically, the planning, documentation, and administration of all related assets including servers, processes, mobile and virtual functions, networks, software and data.</p>
+						<p>Get expert infrastructure support and guidance for all forms of IT Infrastructure models:
                     </div>
                 </div>
             </div>
@@ -183,10 +184,10 @@
                             <!-- Section Tittle -->
                             <div class="section-tittle section-tittle2 mb-50">
                                 <span>Infrastructure Management</span>
-                                <h2>Efficiency and optimized management</h2>
+                                <h2>Efficiency and optimized management.</h2>
                             </div>
                             <div class="support-caption">
-                                <p class="pera-top">Advantages of our solution for IT Infrastructure Management</p>
+                                <p class="pera-top">Advantages of our solution for IT Infrastructure Management.</p>
                                 <p class="mb-65">Increase the efficiency of IT processes through end-to-end process management by leveraging the solution’s templates, process and work order management, comprehensive component library, and powerful planning functionalities for cables, network, storage, and servers.</p>
                                 <a href="about.html" class="btn post-btn">More About Us</a>
                             </div>
