--- a/about.html
+++ b/about.html
@@ -145,7 +145,6 @@
 							 <h5>That’s where we live—and that’s where we’re ready to take you.</h5>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -164,7 +163,7 @@
                             <!-- Section Tittle -->
                             <div class="section-tittle section-tittle2 mb-50">
                                 <span>Our Approach</span>								
-                                <h2>Innovative technology for innovative business</h2>
+                                <h2>Innovative technology for innovative business.</h2>
                             </div>
                             <div class="support-caption">
                                 <p class="pera-top">A passion to serve and solve customers’ complex technology convergence challenges.</p>
