--- a/consulting_services_details.html
+++ b/consulting_services_details.html
@@ -126,7 +126,7 @@
                 <div class="col-lg-12">	
 					<div class="section-tittle mb-70">
                          <span>Consulting Services</span>
-                        <h2>OUR IT CONSULTING SERVICES</h2>
+                        <h2>Our IT Consulting Services</h2>
 						<p>Use the expertise and deep tech background of the best minds at Consilium to create a comprehensive IT strategy for a digital and technological transformation of your organization that goes in line with your business objectives. Our strategic IT consulting will help you automate and digitalise operations, optimise the software portfolio, and implement the latest technologies.</p>
 					</div>
                 </div>
@@ -138,7 +138,7 @@
                             <span class="fas fa-align-left"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">ENTERPRISE ARCHITECTURE ADVISORY</a></h5>
+                            <h5><a>Entreprise Architecture Advisory </a></h5>
                             <p>Our Enterprise Architecture experts can help you make the transition from outdated and ineffective IT delivery systems and architectures to a cloud-based infrastructure that streamlines delivery and allows for implementation of new technologies into your software strategy.</p>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                             <span class="fas fa-align-center"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">IT STRATEGY CONSULTING</a></h5>
+                            <h5><a>IT Strategy Consulting</a></h5>
                             <p>Today, you need to ensure the consistent delivery of high-quality IT products and services for your enterprise workflow and your customers. You also need to implement new technologies to stay competitive and meet the demands of modern users. Our IT solutions consulting will help your strike the balance between these two objectives, ensuring they don’t conflict between one another.</p>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                             <span class="fas fa-align-right"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="">SOFTWARE PORTFOLIO CONSULTING</a></h5>
+                            <h5><a>Software Portfolio Consulting</a></h5>
                             <p>Our IT consulting advisors will conduct a deep analysis of how your business and employees use your existing enterprise software, as well as of your enterprise mobile strategy. Then, they will provide suggestions for the required changes, new developments, and integration of third-party solutions to remove the existing roadblocks.</p>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                             <!-- Section Tittle -->
                             <div class="section-tittle section-tittle2 mb-50">
                                 <span>Consulting Services</span>
-                                <h2>OUR IT CONSULTING PROCESS</h2>
+                                <h2>Our IT Consulting Process.</h2>
                             </div>
                             <div class="support-caption">
                                 <p class="pera-top">For more than five years now Consilium has been helping organizations of different scale and structure to improve and modernise their IT strategies.</p>
